option java_package = "com.xt.texas.message";
option java_outer_classname = "TableWinRecordProto";
message TableWinRecord {
    repeated PlayerWinRecord playerWinRecords=1;
    message PlayerWinRecord{
        optional int64 playerId=1;
        optional string name=2;
        optional int64 winGold=3;
    }
}